--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.1",
         "express-async-handler": "^1.2.0",
-        "mongoose": "^6.5.0"
+        "mongoose": "^6.5.0",
+        "yarn": "^1.22.19"
     },
     "devDependencies": {
         "concurrently": "^4.0.1",
