--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.18.1",
         "express-async-handler": "^1.2.0",
         "mongoose": "^6.5.0",
+        "multer": "^1.4.5-lts.1",
         "mysql": "^2.18.1",
         "yarn": "^1.22.19"
     },
