--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@material-ui/core": "^5.0.0-beta.5",
+        "@mui/styles": "^5.9.3",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "express": "^4.18.1",
